Fix for counting marker types. Added execute helmet. Puddle reflections.

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -49,6 +49,9 @@ global $markers=0
 global $intel=0
 global $intel_prev=0
 global $goals=0
+global $goal_arrows=0
+global $executes=0
+global $crosshairs=0
 ; text variables
 global $new_chars=0
 global $is_front_text=0
@@ -84,20 +87,26 @@ global $split_back=0
 global $back=0
 
 [Present]
+post run=CommandListReset
+
+[CommandListReset]
 ; process last frame behaviour
 if ($unknown_chars > 0)
 	run=CommandListSaveUnknownChars
 endif
-$intel_prev = $intel
-if ($intel_prev < $markers - $goals)
-	$intel_prev = $markers - $goals
+$intel_prev = $markers - ($goals + $crosshairs + $executes)
+if ($intel_prev < $intel)
+	$intel_prev = $intel
 endif
 ; reset counters
 $depth_map=0
 $texts=0
 $markers=0
-$goals=0
 $intel=0
+$goals=0
+$goal_arrows=0
+$executes=0
+$crosshairs=0
 ;Resource\Addons\debug_cb.ini\debugcb=copy ResourceDepthValue
 
 [KeyToggleDepth]
@@ -359,7 +368,7 @@ endif
 
 [CommandListTextIsGoal]
 ; text while at depth is part of a centre goal
-if (($texts - $intel) < $goals && $at_depth)
+if (($texts - $intel) < ($goals - $goal_arrows) && $at_depth)
 	$is_goal = 1
 	run=CommandListTextFrontOrBack
 else if ($intel_prev > 0 && $goals == 0)
@@ -425,8 +434,11 @@ vs-cb11=ResourceMatrices
 
 [CommandListCrosshair]
 $marker_type = $crosshair
-; treat crosshair as one element
-$new_sprites = 1
+if ($allow_depth)
+	; treat crosshair as one element
+	$new_sprites = 1
+	$crosshairs = $crosshairs + 1
+endif
 run=CommandListStartDepth
 post run=CommandListEndDepth
 post $marker_type = 0
@@ -482,6 +494,7 @@ run=CommandListBlobMarkerStart
 ; extra blob is drawn when an arrow is drawn
 if ($allow_depth && $at_depth)
 	$req_blobs = $req_blobs + 1
+	$goal_arrows = $goal_arrows + 1
 endif
 [TextureOverride_DecoText1]
 hash=88cac974
@@ -518,10 +531,19 @@ endif
 [TextureOverride_ExecuteMarkStart]
 hash=90d0b12f
 $marker_type = $execute
+if ($allow_depth)
+	post $executes = $executes + $new_sprites	
+endif
 run=CommandListStartDepth
 post $marker_type = 0
 [TextureOverride_ExecuteMarkMiddle]
 hash=62de70a7
+run=CommandListUseDepth
+[TextureOverride_ExecuteMarkHelmetBack]
+hash=ff7a9e37
+run=CommandListUseDepth
+[TextureOverride_ExecuteMarkHelmetFront]
+hash=af41cd04
 run=CommandListUseDepth
 [TextureOverride_ExecuteMarkEnd]
 hash=2971c2e6
