Improved sprite layering in loadout menu

--- a/Configs/Menu Common Textures.ini
+++ b/Configs/Menu Common Textures.ini
@@ -15,12 +15,12 @@ endif
 
 [TextureOverride_TitleScreenText]
 hash=08075193
-filter_index=3
+filter_index=5
 ;probably redundant, but we're definitely in the tile screen if this is rendered
 $title_screen=1
 [TextureOverride_TitleScreenGFX]
 hash=8b344f95
-filter_index=2
+filter_index=3
 ;probably redundant, but we're definitely in the tile screen if this is rendered
 $title_screen=1
 [TextureOverride_PauseIconGhost]
@@ -161,8 +161,12 @@ hash=7e487544
 filter_index=4
 [TextureOverride_Icon_Pulse3]
 hash=aa5a8e05
-;TODO: this needs to be 2 in the loadout screen
-filter_index=4
+filter_index=6
+if ($\Configs\Render_Targets.ini\in_loadout)
+    x2 = 2
+else
+    x2 = 4
+endif
 [TextureOverride_DialogDetails]
 hash=6dae3381
 filter_index=3.1
