--- a/Configs/Menu Loadout Textures.ini
+++ b/Configs/Menu Loadout Textures.ini
@@ -43,3 +43,43 @@ filter_index=1
 [TextureOverride_BackgroundImage2]
 hash=af059f46
 filter_index=1
+
+[TextureOverride_GadgetProximityShocker]
+hash=0b792b74
+filter_index=2.5
+[TextureOverride_GadgetStickyShocker]
+hash=2e0c504d
+filter_index=2.5
+[TextureOverride_GadgetFlashBang]
+hash=10c532d4
+filter_index=2.5
+[TextureOverride_GadgetFragGrenade]
+hash=93a6a689
+filter_index=2.5
+[TextureOverride_GadgetSmokeGrenade]
+hash=394a5e04
+filter_index=2.5
+[TextureOverride_GadgetTearGas]
+hash=882dfa2f
+filter_index=2.5
+[TextureOverride_GadgetTriRotor]
+hash=9572494d
+filter_index=2.5
+[TextureOverride_GadgetSleepingGas]
+hash=a0c60491
+filter_index=2.5
+[TextureOverride_GadgetStickyCamera]
+hash=a459f322
+filter_index=2.5
+[TextureOverride_GadgetProximityMine]
+hash=bedc6499
+filter_index=2.5
+[TextureOverride_GadgetIncindiaryGrenade]
+hash=cd91de86
+filter_index=2.5
+[TextureOverride_GadgetStickyNoiseMaker]
+hash=d7c99e0f
+filter_index=2.5
+[TextureOverride_GadgetBreachingCharge]
+hash=ea9738f0
+filter_index=2.5
