--- a/Configs/Menu_Common_Shaders.ini
+++ b/Configs/Menu_Common_Shaders.ini
@@ -10,9 +10,11 @@ global $shader_id=0
 global $max_id=0
 global $max_id_prev=0
 global $menu_open=0
+global $menu_open_prev=0
 
 [Present]
 z2=$gui_separation
+$menu_open_prev=$menu_open
 $menu_open=0
 $max_id_prev=$max_id
 $max_id=0
@@ -91,8 +93,12 @@ run=CommandListGUIShaderNoDump
 
 [CommandListGUIShaderNoDump]
 run=CommandListGUIShaderNoTextures
-checktextureoverride=ps-t0
-x2=ps-t0
+if (ps-t0 == 6)
+	checktextureoverride=ps-t0
+else
+	x2=ps-t0
+endif
+post x2 = 0
 y2=$menu_open
 
 [CommandListGUIShaderNoTextures]
