Improved convergence and menu separation in loadout

--- a/Configs/Menu Common Textures.ini
+++ b/Configs/Menu Common Textures.ini
@@ -133,7 +133,7 @@ hash=da10f7a1
 filter_index=1
 [TextureOverride_BackgroundGrid]
 hash=5ed7ac62
-filter_index=1
+match_priority=1
 ;if render target is main screen, and the grid is shown, we're in a menu
 if (o0==-1)
 $title_screen=1
@@ -159,14 +159,6 @@ filter_index=4
 [TextureOverride_Icon_Pulse2]
 hash=7e487544
 filter_index=4
-[TextureOverride_Icon_Pulse3]
-hash=aa5a8e05
-filter_index=6
-if ($\Configs\Render_Targets.ini\in_loadout)
-    x2 = 2
-else
-    x2 = 4
-endif
 [TextureOverride_DialogDetails]
 hash=6dae3381
 filter_index=3.1
