--- a/Configs/Render_Targets.ini
+++ b/Configs/Render_Targets.ini
@@ -1,10 +1,40 @@
 [Constants]
 global $in_loadout=0
-global $in_loadout_prev=0
+global $bg_depth=0
 
-[Present]
-$in_loadout_prev = $in_loadout
-$in_loadout=0
+[PresetLoadout]
+convergence=75
+$in_loadout=1
+$bg_depth=-12
+transition=500
+release_transition=500
+
+[PresetLoadoutGadget]
+convergence=200
+$in_loadout=1
+$bg_depth=1
+
+[TextureOverride_BackgroundGrid]
+hash=5ed7ac62
+match_priority=0
+filter_index=6
+if ($\Configs\Render_Targets.ini\in_loadout)
+    x2 = $bg_depth
+else
+    x2 = 1
+endif
+
+[TextureOverride_LoadoutGadgetHexagon]
+hash=aa5a8e05
+filter_index=6
+if ($in_loadout)
+    x2 = 2
+    exclude_preset=PresetLoadout
+    preset=PresetLoadoutGadget
+else 
+    ; Also used as a pulse on other menus
+    x2 = 4
+endif
 
 [TextureOverride_AllRenderTargets]
 match_type = Texture2D
@@ -17,11 +47,11 @@ stereomode=1
 [ShaderOverride_ShadowMap]
 hash=7c5d68afebead6cc
 ; Temporary fix
-x4=$in_loadout_prev
+x4=$in_loadout
 
 [ShaderOverride_BodyPos3]
 hash=23d8e685b5bb9aee
-if ($in_loadout_prev)
+if ($in_loadout)
     handling=skip
     run=CustomShader_BodyPos4
 endif
@@ -35,7 +65,7 @@ draw=from_caller
 
 [ShaderOverride_HeadPos3]
 hash=594f0cceb152b7e9
-if ($in_loadout_prev)
+if ($in_loadout)
     handling=skip
     run=CustomShader_BodyPos4
 endif
@@ -69,7 +99,7 @@ hash=d979b3967eb5f0d3
 if (o0 == -5)
     pre Resource_LoadoutRenderTargetStereo = copy_desc o0
     pre o0 = ref Resource_LoadoutRenderTargetStereo
-    $in_loadout=1
+    preset=PresetLoadout
 endif
 
 ; Draws textures to the ShadowNet/Loadout menu
