--- a/Configs/Cutscene.ini
+++ b/Configs/Cutscene.ini
@@ -70,7 +70,7 @@ hash=df7469f08763def2
 run=CommandList_DoF
 
 [CommandList_DoF]
-if (!$\Configs\Menu_Common_Shaders.ini\menu_open_prev)
+if (!$\Configs\Menu_Shaders.ini\menu_open_prev)
     preset=PresetCutscene
 endif
 if (!$use_dof)
