--- a/Configs/Loadout_Shaders.ini
+++ b/Configs/Loadout_Shaders.ini
@@ -18,7 +18,7 @@ $bg_depth=1
 hash=5ed7ac62
 match_priority=0
 filter_index=6
-if ($\Configs\Render_Targets.ini\in_loadout)
+if ($in_loadout)
     x2 = $bg_depth
 else
     x2 = 1
