--- a/Configs/Menu_Shaders.ini
+++ b/Configs/Menu_Shaders.ini
@@ -89,7 +89,7 @@ $menu_open=(rt_width == res_width)
 
 [CommandListGUIShader]
 run=CommandListGUIShaderNoDump
-;dump=dump_tex dds share_dupes mono ps-t0
+;dump=dump_tex dds mono ps-t0
 
 [CommandListGUIShaderNoDump]
 run=CommandListGUIShaderNoTextures
@@ -209,7 +209,10 @@ hash=257d74e7390dfbb2
 $shader_id=17
 run=CommandListGUIShader
 
+;[ShaderOverride_Dump]
+;hash=
 ;run= CommandListDumpTex
+
 [CommandListDumpTex]
 analyse_options=dump_tex dds mono
 [CommandListDumpTex0]
