Stable fix for goals and intel

--- a/Configs/Array.ini
+++ b/Configs/Array.ini
@@ -87,3 +87,21 @@ else if ($index == 14)
 else if ($index == 15)
 	$value = $value_F
 endif
+
+[CommandListClear]
+$value_0=0
+$value_1=0
+$value_2=0
+$value_3=0
+$value_4=0
+$value_5=0
+$value_6=0
+$value_7=0
+$value_8=0
+$value_9=0
+$value_A=0
+$value_B=0
+$value_C=0
+$value_D=0
+$value_E=0
+$value_F=0
