--- a/Configs/HUD.ini
+++ b/Configs/HUD.ini
@@ -19,6 +19,7 @@ hash=c442e026
 filter_index=5
 [TextureOverride_CounterBG]
 hash=bb37afca
+match_priority = 1
 filter_index=4.5
 [TextureOverride_RadarArrow]
 hash=2d1a94fe
