--- a/Configs/Menu_Shaders.ini
+++ b/Configs/Menu_Shaders.ini
@@ -149,6 +149,7 @@ run=CommandListMenuShader
 
 [ShaderOverride_Decorations2]
 hash=9ceefab76c72863a
+allow_duplicate_hash = true
 $shader_id=6
 run=CommandListGUIShader
 
