--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -207,6 +207,14 @@ post ResourceMatrices = copy ps-cb11
 post $depth_map = 1
 run = CommandList_DisplayDepth
 
+[ShaderOverride_DepthSourceUltra]
+hash = 07554C1CC34C4400
+;post ResourceDepthBuffer = stereo2mono ps-t1
+post ResourceDepthBuffer = ps-t0
+post ResourceMatrices = copy ps-cb11
+post $depth_map = 1
+run = CommandList_DisplayDepth
+
 [CommandList_DisplayDepth]
 if ($show_depth)
     ;Resource\Addons\Debug_2D.ini\Debug2D = ResourceDepthBuffer
