Fix for Low and Medium Shadow quality

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -199,10 +199,19 @@ x4 = 0
 ; must set o0 BEFORE ps-u*
 ps-u1 = null
 
-[ShaderOverride_DepthSourceShadowBlur]
-hash = 60187e629aa8f9cd
+[ShaderOverride_DepthSourceLow]
+hash = 4d53ddce5a9e8dc4
 ;post ResourceDepthBuffer = stereo2mono ps-t1
-post ResourceDepthBuffer = ps-t1
+post ResourceDepthBuffer = ps-t0
+post ResourceMatrices = copy ps-cb11
+post $depth_map = 1
+run = CommandList_DisplayDepth
+
+[ShaderOverride_DepthSourceMediumHigh]
+hash = 7c5d68afebead6cc
+allow_duplicate_hash = true
+;post ResourceDepthBuffer = stereo2mono ps-t1
+post ResourceDepthBuffer = ps-t0
 post ResourceMatrices = copy ps-cb11
 post $depth_map = 1
 run = CommandList_DisplayDepth
