Added backup depth source for when lights are off

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -201,30 +201,26 @@ ps-u1 = null
 
 [ShaderOverride_DepthSourceLow]
 hash = 4d53ddce5a9e8dc4
-;post ResourceDepthBuffer = stereo2mono ps-t1
-post ResourceDepthBuffer = ps-t0
-post ResourceMatrices = copy ps-cb11
-post $depth_map = 1
-run = CommandList_DisplayDepth
+run = CommandList_CaptureDepth
 
 [ShaderOverride_DepthSourceMediumHigh]
 hash = 7c5d68afebead6cc
 allow_duplicate_hash = true
-;post ResourceDepthBuffer = stereo2mono ps-t1
-post ResourceDepthBuffer = ps-t0
-post ResourceMatrices = copy ps-cb11
-post $depth_map = 1
-run = CommandList_DisplayDepth
+run = CommandList_CaptureDepth
 
 [ShaderOverride_DepthSourceUltra]
 hash = 07554C1CC34C4400
+run = CommandList_CaptureDepth
+
+[ShaderOverride_DepthSourceBackup]
+hash = FA119ACE02FB0CD0
+run = CommandList_CaptureDepth
+
+[CommandList_CaptureDepth]
 ;post ResourceDepthBuffer = stereo2mono ps-t1
 post ResourceDepthBuffer = ps-t0
 post ResourceMatrices = copy ps-cb11
 post $depth_map = 1
-run = CommandList_DisplayDepth
-
-[CommandList_DisplayDepth]
 if ($show_depth)
     ;Resource\Addons\Debug_2D.ini\Debug2D = ResourceDepthBuffer
 else
@@ -275,7 +271,7 @@ if ($allow_depth && $at_depth)
     ; marker_type
     w3 = 0
     vs-t14 = null
-    ;dump = dump_rt jpg mono o0
+    ;post dump = dump_rt jpg mono o0
 endif
 
 [CommandList_EndDepth_Post]
