Fixed loadout lighting and added manual adjustment mechanism for testing.

--- a/Configs/Cutscene.ini
+++ b/Configs/Cutscene.ini
@@ -7,35 +7,87 @@ $is_cutscene=1
 convergence=50
 release_transition=500
 
-[Key2D]
-Key = VK_PAUSE
-Type = toggle
-separation=0
-release_transition=1000
-transition=1000
+;[Key2D]
+;Key = VK_PAUSE
+;Type = toggle
+;separation=0
+;release_transition=1000
+;transition=1000
 
 [KeyDoF]
 Key = VK_SCROLL
 Type = cycle
 $use_dof = 0,1
 
+[KeyOffsetIncreaseX]
+Key = VK_INSERT
+run = CommandListOffsetIncreaseX
+[CommandListOffsetIncreaseX]
+x5 = x5 + 1
+[KeyOffsetDecreaseX]
+Key = VK_DELETE
+run = CommandListOffsetDecreaseX
+[CommandListOffsetDecreaseX]
+x5 = x5 - 1
+[KeyOffsetIncreaseY]
+Key = VK_HOME
+run = CommandListOffsetIncreaseY
+[CommandListOffsetIncreaseY]
+y5 = y5 + 1
+[KeyOffsetDecreaseY]
+Key = VK_END
+run = CommandListOffsetDecreaseY
+[CommandListOffsetDecreaseY]
+y5 = y5 - 1
+[KeyOffsetIncreaseZ]
+Key = VK_PAGEUP
+run = CommandListOffsetIncreaseZ
+[CommandListOffsetIncreaseZ]
+z5 = z5 + 1
+[KeyOffsetDecreaseZ]
+Key = VK_PAGEDOWN
+run = CommandListOffsetDecreaseZ
+[CommandListOffsetDecreaseZ]
+z5 = z5 - 1
+[KeyOffsetIncreaseW]
+Key = VK_PAUSE
+run = CommandListOffsetIncreaseW
+[CommandListOffsetIncreaseW]
+w5 = w5 + 1
+[KeyOffsetDecreaseW]
+Key = VK_PRINTSCREEN
+run = CommandListOffsetDecreaseW
+[CommandListOffsetDecreaseW]
+w5 = w5 - 1
+[KeyOffsetReset]
+Key = VK_BACKSPACE
+run = CommandListOffsetReset
+[CommandListOffsetReset]
+x5 = 0
+y5 = 0
+z5 = 0
+w5 = 0
+
 [ShaderOverride_Lighting]
 hash=9345e42dbd2b2a06
 w2=$is_cutscene
-x3=ps
+; light_type
+pre x3=ps
 post x3=0
 
 [ShaderOverride_Omni]
 hash=29b5047597d81be1
-filter_index = 1
+filter_index = 2
 
 [ShaderOverride_Spot]
 hash=EA09EA39E048E46B
-filter_index = 0
+filter_index = 1
+;pre dump = txt vs-cb3
+;post dump = dump_rt jpg mono o0
 
 [ShaderOverride_Baked]
 hash=21ec127aa30bffca
-filter_index = 0
+filter_index = 3
 
 [ShaderOverride_DoF_Mask]
 hash=0c72e71802f7805a
