--- a/d3dx.ini
+++ b/d3dx.ini
@@ -25,7 +25,7 @@ include = Addons\upscale.ini
 include = Addons\mouse.ini
 
 ;include = Addons\debug_2d.ini
-;include = Addons\debug_cb.ini
+include = Addons\debug_cb.ini
 
 ; Uncomment to enable a custom shader that allows the stereo output mode to be
 ; changed to Side-by-Side or Top-and-Bottom via the F11 key. If you are using
@@ -262,8 +262,7 @@ hunting=2
 ; "original" = fall back to original shader if the currently selected shader was patched.
 ; "pink" = make the output hot pink to make it standout.
 ; "mono" = disable stereo for the selected shader / rendertarget.
-; "zero" = shader output is all zero. NOTE: this has a big performance impact.
-marking_mode=original
+marking_mode=skip
 
 ; Cycle through available marking modes. VK_DECIMAL VK_NUMPAD0
 ; means hold the dot on the number pad while pressing numpad 0:
@@ -481,9 +480,7 @@ analyse_frame = no_modifiers VK_F8
 ; frame analysis cannot otherwise see (e.g. "dump = ResourceDepthBuffer"). Use
 ; additional "dump" commands to dump multiple resources.
 ;
-;analyse_options = dump_rt jps clear_rt
-
-
+;analyse_options = hold
 
 ;------------------------------------------------------------------------------------------------------
 ; Chain load other wrapper DLLs instead of system DLLs.
@@ -523,11 +520,9 @@ check_foreground_window=1
 ; 
 ; Start with allow_check_interfaces, if that doesn't work
 ; then try allow_create_device=2, lastly try allow_create_device=1
-; 
 allow_check_interface=1
 allow_create_device=1
 allow_platform_update=1
-
 
 ;------------------------------------------------------------------------------------------------------
 ; Settings to force display device to a specific mode.
@@ -550,14 +545,14 @@ upscaling = 0
 ; If upscaling is on, the resizing functionality is disabled.
 ; If upscaling is on, then you MUST specify the resolution the game will be upscaled to.
 ; To achieve the best visual result use the native resolution of your tv or monitor.
-width = 3840
-height = 2160
+;width = 3840
+;height = 2160
 
 ; upscale_mode = 0: 3Dmigoto creates a texture and pushes it as the back buffer for the game.
 ; Seems to work with only few games but everything seems to run a bit smoother.
 ; upscale_mode = 1: 3Dmigoto creates a second swap chain and pushes the game to use it.
 ; Seems to work with most games. dont forget to activate upscaling shader in [present] section
-upscale_mode = 0
+;upscale_mode = 0
 
 ; overrides refresh rate set by game.
 ;refresh_rate=60
@@ -591,10 +586,12 @@ upscale_mode = 0
 ; NvAPI_Stereo_Enable to force stereo on.
 ; Setting this to 2 sets 3Dmigoto to use 3D Vision Direct Mode
 force_stereo=0
+; Geo11
+;force_stereo=2
 
 ; almost all DX11 games deactivate window message handling.
 ; setting this to 1 reenables print screen handling, alt-tab key handling etc.
-;allow_windowcommands=1
+allow_windowcommands=1
 
 ; Indicates where the resolution is obtained for texture hashes. Comment this
 ; out to never special case hashes that match the resolution or a multiple.
@@ -686,7 +683,7 @@ cache_directory=ShaderCache
 storage_directory=ShaderFromGame
 
 ; cache all compiled .txt shaders into .bin. this removes loading stalls.
-cache_shaders=0
+cache_shaders=1
 
 ; Indicates whether scissor clipping should be disabled by default. A restart
 ; is required for this to take effect. If you need to do this on a per shader
@@ -750,7 +747,7 @@ export_shaders=0
 export_hlsl=0
 
 ; stores a ShaderUsage.txt file on any marking button press.
-dump_usage=1
+dump_usage=0
 
 ;------------------------------------------------------------------------------------------------------
 ; Automatic shader fixes. Those settings here apply only on newly read shaders.
@@ -1072,7 +1069,7 @@ DX10DSCBNumber=14
 ; Workaround crashes and hangs in games that violate DirectX threading
 ; constraints (e.g. Resident Evil 2/7, Devil May Cry 5). Set to 1 to always
 ; enable workaround or 2 to only enable workaround with 3D Vision:
-APP_COMPAT_SHIM = 2
+APP_COMPAT_SHIM = 1
 ;
 ; If a setting doesn't have a name or you don't know what it is (check the
 ; d3d11_log.txt for the names of all settings in this profile, or use the name
