Added Drone minigame markers and started fixing cubemap reflections. Simplified constants in hlsl.

--- a/Configs/Cutscene.ini
+++ b/Configs/Cutscene.ini
@@ -7,12 +7,19 @@ $is_cutscene=1
 convergence=30
 release_transition=500
 
-;[Key2D]
-;Key = VK_PAUSE
-;Type = toggle
-;separation=0
-;release_transition=1000
-;transition=1000
+[KeyNoSeparation]
+Key = no_control shift no_alt VK_PAUSE
+Type = toggle
+separation=0
+release_transition=1000
+transition=1000
+
+[KeyNoConvergence]
+Key = no_control no_shift alt VK_PAUSE
+Type = toggle
+convergence=0
+release_transition=1000
+transition=1000
 
 [KeyDoF]
 Key = VK_SCROLL
