--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -12,6 +12,7 @@
 ; - Execute:     These are 3 simple sprites drawn in order, but the depth is sampled
 ;                below to try and hit the target, instead of going over their head.
 ; - Crosshair:   Sprites which always use the depth from the middle(ish) of the screen.
+; - Drone:       Multiple sprites followed by text without a shadow
 ;
 ; With the exception of light flares, these are all 'Markers'. 
 ;
@@ -83,6 +84,7 @@ global $goal = 1
 global $intel = 2
 global $crosshair = 3
 global $execute = 4
+global $drone = 5
 ; Texture override pre and post are run together, so this is to ensure each only runs once
 ; Command lists are suffixed with 'Pre', 'Post' and 'Both' to indicate when they are expected to run 
 global $pre = 0
@@ -123,7 +125,7 @@ $batched_intel_text = 0
 ; Shouldn't be needed:
 $marker_type = 0
 
-Resource\Addons\Debug_CB.ini\DebugCB = copy ResourceDepthValue
+;Resource\Addons\Debug_CB.ini\DebugCB = copy ResourceDepthValue
 ;dump = dump_rt jpg mono o0
 ;run = CommandList\Configs\Array.ini\Clear
 ;clear = ResourceDepthValue
@@ -349,6 +351,9 @@ if ($marker_type || $intels_prev || (!$markers_complete && (!$text_before_marker
         endif
     endif
     post run = CommandList_TextFrontOrBack_Post
+    if ($marker_type == $drone)
+        post run = CommandList_EndDepth_Post
+    endif
     post $allow_depth = 0
     ; post dump = dump_rt jps o0
 endif
@@ -735,6 +740,60 @@ if ($allow_depth && $marker_type)
         post $blobs = 0
     endif
 endif
+
+; # Drone Targets #
+; A drone target is comprised of several sprites, followed by text. 
+; Initially, friendly targets don't have text, but eventually can have a health bar after text.
+
+[TextureOverride_DroneTargetStartFriendly]
+hash = 7912df62
+pre $marker_type = $drone
+run = CommandList_StartDepth_Both
+
+[TextureOverride_DroneTarget]
+hash = 6d54948d
+if ($marker_type != $drone)
+    pre $marker_type = $drone
+    run = CommandList_StartDepth_Both
+    ; set back to prevent else if on post
+    pre $marker_type = 0
+    post $marker_type = $drone
+else
+    run = CommandList_UseDepth_Both
+    post run = CommandList_EndDepth_Post
+endif
+
+[TextureOverride_DroneTargetDeco1]
+hash = 65883951
+run = CommandList_UseDepth_Both
+
+[TextureOverride_DroneTargetDeco2]
+hash = 0d956fe2
+run = CommandList_UseDepth_Both
+
+[TextureOverride_DroneTargetDeco3]
+hash = 5d70b473
+run = CommandList_UseDepth_Both
+
+[TextureOverride_DroneTargetDeco4]
+hash = 676108ba
+run = CommandList_UseDepth_Both
+
+[TextureOverride_DroneTargetDeco5]
+hash = 21c5417e
+run = CommandList_UseDepth_Both
+
+[TextureOverride_DroneTargetDecoBox]
+hash = 0a93d249
+run = CommandList_UseDepth_Both
+
+[TextureOverride_DroneTargetHealth]
+hash = 32f0c6fa
+pre $marker_type = $drone
+pre $markers_current = 1
+run = CommandList_UseDepth_Both
+post $marker_type = 0
+post $markers_current = 0
 
 ; # Execute #
 ; Execute markers are straight forward, with a known start and end graphic
