--- a/Configs/Menu_Shaders.ini
+++ b/Configs/Menu_Shaders.ini
@@ -90,6 +90,7 @@ $menu_open=(rt_width == res_width)
 [CommandListGUIShader]
 run=CommandListGUIShaderNoDump
 ;dump=dump_tex dds mono ps-t0
+;dump=dump_tex jpg mono o0
 
 [CommandListGUIShaderNoDump]
 run=CommandListGUIShaderNoTextures
